--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   "devDependencies": {
     "canvas-testbed": "^1.0.2",
     "extract-svg-path": "^1.0.0",
-    "getboundingbox": "^1.0.0",
+    "normalize-path-scale": "^1.0.1",
     "parse-svg-path": "^0.1.1",
     "simplify-path": "^1.0.0",
     "tape": "^3.0.1",
-    "tess2": "git://github.com/mattdesl/tess2.js",
-    "unlerp": "^1.0.1"
+    "triangulate-contours": "^1.0.1"
   },
   "scripts": {
     "test": "node test.js"
